--- a/wpk/src/index.html
+++ b/wpk/src/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>demo1</title>
-	<link rel="stylesheet" href="style.css" />    <!-- 引入打包后的css -->
+	<title>WEBPACK</title>
+	<link rel="stylesheet" href="main.css" />    <!-- 引入打包后的css -->
 </head>
 <body>
-	<div>Hello,world</div>
+	<p>这是天父世界...</p>
 	<div class="con"></div>
 	<div class="imgbox"></div>
 	
 	<script src="common.js"></script>  <!-- 引入打包后的公共单元   -->
-	<script src="bundle.js"></script>  <!-- 引入打包后的js   -->
+	<script src="main.js"></script>  <!-- 引入打包后的js   -->
 </body>
 </html>
 
-<!-- http://192.168.0.87:8009/wui/theme/ecology8/skins/default/page -->
