--- a/wpk/src/index.html
+++ b/wpk/src/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WEBPACK</title>
-	<link rel="stylesheet" href="main.css" />    <!-- 引入打包后的css -->
+	<link rel="stylesheet" href="css/base.css" />    
+	<link rel="stylesheet" href="css/anim.css" />    
 </head>
 <body>
 	<p>这是天父世界...</p>
 	<div class="con"></div>
-	<div class="imgbox"></div>
+	<div class="imgbox"></div>	
 	
-	<script src="common.js"></script>  <!-- 引入打包后的公共单元   -->
-	<script src="main.js"></script>  <!-- 引入打包后的js   -->
+	<script src="js/page.js"></script>  
 </body>
 </html>
 
