--- a/wpk/src/app.html
+++ b/wpk/src/app.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WEBPACK</title>	
-<link href="./css/main.d146e147.css" rel="stylesheet"></head>
+</head>
 <body>
 	<p>这是天父世界...</p>
 	<div class="con"></div>
 	<div class="imgbox"></div>	
 	
-<script src="./js/common.js"></script><script src="./js/main.d146e147.js"></script></body>
+</body>
 </html>
 
