--- a/wpk/src/app.html
+++ b/wpk/src/app.html
@@ -7,7 +7,7 @@
 <body>
 	<p>这是天父世界...</p>
 	<div class="con"></div>
-	<img src="img/rb_loading.gif" alt="" />
+	<!-- <img src="img/rb_loading.gif" alt="" /> -->
 	<div class="imgbox"></div>	
 </body>
 </html>
